# stu

./: .replit  idee.md  main.py  pyproject.toml  replit.nix  students.db  students.sql
models/: __init__.py  database.py
templates/: 404.html  add_task.html  admin_dashboard.html  base.html  create_user.html  dashboard.html  display_ecole_directe_data.html  display_pronote_data.html  edit_user.html  game.html  home.html  index.html  legal_notice.html  login.html  messaging.html  privacy_policy.html  register.html  student_dashboard.html  terms_of_service.html  timetable.html
tests/: create_admin_user.py
