[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask-login>=0.6.3",
    "flask-socketio>=5.4.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "flask>=3.1.0",
    "requests>=2.32.3",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
    "flask-bcrypt>=1.0.1",
]
